# ShapCRN

./: .gitignore  README.md  REPOSITORY_AUDIT_REPORT.md  orig  output_model.xml  pyproject.toml  samples
dots/: BIOMD0000000623_url.dot  diff_model.dot
models/: BIOMD0000000094_url.xml  BIOMD0000000451_url.xml  BIOMD0000000623_url.xml  BIOMD0000000623_url_ki_species_1.xml  BIOMD0000000629_url.xml  KnockinModel.xml  KnockinModelV2.xml  diff_model.xml  diff_model_ki_reaction_r3.xml  diff_model_no_species_A  enzyme_no_species_S  modified_modified.xml  reaction_test_functions.xml  reactions_test.xml  test.xml
report/: absolute_variations.csv  relative_variations.csv  shap.csv
src/: exceptions.py  main.py  mainV2.py  sbml_utils.py  utils.py
src/classes/: SBMLHandler.py  component.py  function.py  product.py  reaction.py  reagent.py  species.py
src/examples/: mainOld.py  mainV2.py
src/pipelines/: importance.py  network.py  sensitivity_analysis.py
src/pipelines/knockin/: knockin_reaction.py  knockin_species.py
src/pipelines/knockout/: knockout_reaction.py  knockout_species.py
src/sbml_utils/: sbml_reactions.py
src/shapcrn/: __init__.py  exceptions.py
src/shapcrn/examples/: __init__.py  mainOld.py  mainV2.py  usage_example.py
src/shapcrn/pipelines/: importance.py  network.py  sensitivity_analysis.py
src/shapcrn/utils/: graph.py  plot.py  sensitivity.py  simulation.py  species.py  utils.py
src/utils/: net_utils.py  plot.py  plot_utils.py  sbml_utils.py  sens_utils.py  sensitivity.py  simulation.py  simulation_utils.py  utils.py
src/utils/sbml/: io.py  (+4 more)
(+15 files in other folders)
